--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -4,7 +4,7 @@ date: 2025-09-25 10:00:00 +0000
 toc: true
 ---
 
-{% include toc title="Содержание" %}
+{% include toc.html title="Содержание" %}
 
 ## 📖 Введение
 Добро пожаловать в гайд по всем доступным командам бота!\
