Refactor command sections to use captured variables for better readability

--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -4,7 +4,29 @@ date: 2025-09-25 10:00:00 +0000
 toc: true
 ---
 
+{% assign commands = site.data.commands %}
+
 {% include toc.html title="Содержание" %}
+
+{% capture basics %}
+{% for cmd in commands.basic %}
+| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
+{% endfor %}
+{% endcapture %}
+
+{% capture advanced %}
+{% for cmd in commands.advanced %}
+| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
+{% endfor %}
+{% endcapture %}
+
+{% capture system %}
+{% for cmd in commands.system %}
+| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
+{% endfor %}
+{% endcapture %}
+
+
 
 ## 📖 Введение
 Добро пожаловать в гайд по всем доступным командам бота!\
@@ -12,27 +34,19 @@ toc: true
 возможностях игры.
 
 ## ⚔️ Основные
-{% assign commands = site.data.commands %}
-
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{% for cmd in commands.basic %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
+{{ basics }}
 
 ## 🏰 Продвинутые
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{% for cmd in commands.advanced %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
+{{ advanced }}
 
 ## ⚙️ Системные команды
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{% for cmd in commands.system %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
+{{ system }}
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
