Enhance command tables by applying markdown formatting and stripping unnecessary whitespace

--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -36,17 +36,18 @@ toc: true
 ## ⚔️ Основные
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ basics }}
+{{ basics | markdownify | strip }}
 
 ## 🏰 Продвинутые
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ advanced }}
+{{ advanced | markdownify | strip }}
 
 ## ⚙️ Системные команды
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ system }}
+{{ system | markdownify | strip }}
+
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
