--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -27,6 +27,13 @@ toc: true
 {% endcapture %}
 
 
+| Команда | Альтернатива | Описание |
+|:--------|:-------------|:---------|
+| Команда | Альтернатива | Описание |
+| Команда | Альтернатива | Описание |
+| Команда | Альтернатива | Описание |
+
+
 
 ## 📖 Введение
 Добро пожаловать в гайд по всем доступным командам бота!\
