Remove command definitions from YAML and update command documentation for clarity

--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -8,32 +8,6 @@ toc: true
 
 {% include toc.html title="Содержание" %}
 
-{% capture basics %}
-{% for cmd in commands.basic %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
-{% endcapture %}
-
-{% capture advanced %}
-{% for cmd in commands.advanced %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
-{% endcapture %}
-
-{% capture system %}
-{% for cmd in commands.system %}
-| `{{ cmd.name }}` | `{{ cmd.alternatives }}` | {{ cmd.description }} |
-{% endfor %}
-{% endcapture %}
-
-
-| Команда | Альтернатива | Описание |
-|:--------|:-------------|:---------|
-| Команда | Альтернатива | Описание |
-| Команда | Альтернатива | Описание |
-| Команда | Альтернатива | Описание |
-
-
 
 ## 📖 Введение
 Добро пожаловать в гайд по всем доступным командам бота!\
@@ -43,18 +17,22 @@ toc: true
 ## ⚔️ Основные
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ basics | markdownify | strip }}
+| `/start`[^start] | `/town`, `этот город` | Осмотреть город |
 
 ## 🏰 Продвинутые
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ advanced | markdownify | strip }}
+| Команда | Альтернатива | Описание |
 
 ## ⚙️ Системные команды
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-{{ system | markdownify | strip }}
+| `/my_id`[^my_id] | `мой айди` | Узнать свой айди |
+| (Любая команда в ЛС боту)[^private] | - | Приветственное сообщение |
 
+
+## Подробности
+[^start]: `/start`: 
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
