--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -17,7 +17,7 @@ toc: true
 ## ⚔️ Основные
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-| `/start`[^start] | `/town`, `этот город` | Осмотреть город |
+| `/start`<sup id="a1">[1](#f1)</sup> | `/town`, `этот город` | Осмотреть город |
 
 ## 🏰 Продвинутые
 | Команда | Альтернатива | Описание |
@@ -32,7 +32,8 @@ toc: true
 
 
 ## Подробности
-[^start]: `/start`: 
+![Desktop View](/assets/img/town.png){: width="972" height="589" .w-50 .right}
+<p id="f1"><sup>[1]</sup> <code>/start</code>: Название поселения, 👥 Количество участников, 👑 Мэр</p>
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
