--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -14,10 +14,23 @@ toc: true
 Этот документ поможет новичкам и опытным игрокам быстро разобраться в
 возможностях игры.
 
-## ⚔️ Основные
-| Команда | Альтернатива | Описание |
-|:--------|:-------------|:---------|
-| `/start`<sup id="a1">[1](#f1)</sup> | `/town`, `этот город` | Осмотреть город |
+<table>
+  <thead>
+    <tr>
+      <th>Команда</th>
+      <th>Альтернатива</th>
+      <th>Описание</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>/start<sup>[1]</sup></td>
+      <td>/town, этот город</td>
+      <td>Осмотреть город</td>
+    </tr>
+  </tbody>
+</table>
+
 
 ## 🏰 Продвинутые
 | Команда | Альтернатива | Описание |
@@ -32,7 +45,7 @@ toc: true
 
 
 ## Подробности
-![Desktop View](/assets/img/town.png){: width="972" height="589" .w-50 .right}
+![Desktop View](/assets/img/town.png){: width="270" height="120" }
 <p id="f1"><sup>[1]</sup> <code>/start</code>: Название поселения, 👥 Количество участников, 👑 Мэр</p>
 
 ## 🔮 Заключение
