--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -10,9 +10,12 @@ toc: true
 
 
 ## 📖 Введение
+
 Добро пожаловать в гайд по всем доступным командам бота!\
 Этот документ поможет новичкам и опытным игрокам быстро разобраться в
 возможностях игры.
+
+## ⚔️ Основные
 
 <table>
   <thead>
@@ -24,7 +27,7 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>/start<sup>[1]</sup></td>
+      <td>/start<sup><a href="#note-start">[1]</a></sup></td>
       <td>/town, этот город</td>
       <td>Осмотреть город</td>
     </tr>
@@ -33,11 +36,13 @@ toc: true
 
 
 ## 🏰 Продвинутые
+
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
 | Команда | Альтернатива | Описание |
 
 ## ⚙️ Системные команды
+
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
 | `/my_id`[^my_id] | `мой айди` | Узнать свой айди |
@@ -45,8 +50,9 @@ toc: true
 
 
 ## Подробности
+
 ![Desktop View](/assets/img/town.png){: width="270" height="120" }
-<p id="f1"><sup>[1]</sup> <code>/start</code>: Название поселения, 👥 Количество участников, 👑 Мэр</p>
+<p id="note-start"><sup>[1]</sup> <code>/start</code>: 🏘 Название поселения, 👥 Количество участников, 👑 Мэр</p>
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
