--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -52,7 +52,7 @@ toc: true
 ## Подробности
 
 ![Desktop View](/assets/img/town.png){: width="270" height="120" }
-<p id="note-start"><sup>[1]</sup> <code>/start</code>: 🏘 Название поселения, 👥 Количество участников, 👑 Мэр</p>
+__<p id="note-start"><sup>[1]</sup> Название поселения, 👥 Количество участников, 👑 Мэр</p>__
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
