--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -27,7 +27,7 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>/start<sup><a href="#note-start">[1]</a></sup></td>
+      <td>/start<a href="#note-start">ⁱ</a></td>
       <td>/town, этот город</td>
       <td>Осмотреть город</td>
     </tr>
@@ -45,14 +45,14 @@ toc: true
 
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-| `/my_id`[^my_id] | `мой айди` | Узнать свой айди |
+| `/my_id` | `мой айди` | Узнать свой айди |
 | (Любая команда в ЛС боту)[^private] | - | Приветственное сообщение |
 
 
 ## Подробности
 
 ![Desktop View](/assets/img/town.png){: width="270" height="120" }
-__<p id="note-start"><sup>[1]</sup> Название поселения, 👥 Количество участников, 👑 Мэр</p>__
+<p id="note-start">Название поселения, 👥 Количество участников, 👑 Мэр</p>
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
