--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -51,8 +51,9 @@ toc: true
 
 ## Подробности
 
-![Desktop View](/assets/img/town.png){: width="270" height="120" }
-_<p id="note-start">Название поселения, 👥 Количество участников, 👑 Мэр</p>_
+![Desktop View](/assets/img/town.png){: width="270" height="120" .w-75 .normal}
+_/start_
+<p id="note-start">Название поселения, 👥 Количество участников, 👑 Мэр</p>
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
