--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -27,7 +27,7 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>/start<a href="#note-start" style="text-decoration: none;">⁺</a></td>
+      <td>/start<a href="#note-start">⁺</a></td>
       <td>/town, этот город</td>
       <td>Осмотреть город</td>
     </tr>
@@ -45,15 +45,16 @@ toc: true
 
 | Команда | Альтернатива | Описание |
 |:--------|:-------------|:---------|
-| `/my_id` | `мой айди` | Узнать свой айди |
+| `/my_id`<a href="#my_id">⁺</a> | `мой айди` | Узнать свой айди |
 | (Любое сообщение в ЛС) | - | Приветственное сообщение |
 
 
 ## Подробности
 
 ![Desktop View](/assets/img/town.png){: width="270" height="120" .w-75 .normal}
-_/start_
-<p id="note-start">Название поселения, 👥 Количество участников, 👑 Мэр</p>
+<p id="my_id"></p>
+
+---
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
