--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -27,7 +27,7 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>/start<a href="#note-start">⁺</a></td>
+      <td>/start<a href="#start">⁺</a></td>
       <td>/town, этот город</td>
       <td>Осмотреть город</td>
     </tr>
@@ -52,6 +52,8 @@ toc: true
 ## Подробности
 
 ![Desktop View](/assets/img/town.png){: width="270" height="120" .w-75 .normal}
+<p id="start"></p>
+
 <p id="my_id"></p>
 
 ---
