--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -27,9 +27,15 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>/start<a href="#start">⁺</a></td>
-      <td>/town, этот город</td>
+      <td>
+        <img src="/assets/img/town.png" align="left" valign="top" width="100%">
+        <code>/start</code><a href="#start">⁺</a>
+      </td>
+      <td><code>/town</code> <code>этот город</code></td>
       <td>Осмотреть город</td>
+    </tr>
+    <tr>
+      <td></td>
     </tr>
   </tbody>
 </table>
@@ -49,14 +55,14 @@ toc: true
 | (Любое сообщение в ЛС) | - | Приветственное сообщение |
 
 
-## Подробности
+## 📜 Подробности
 
 ![Desktop View](/assets/img/town.png){: width="270" height="120" .w-75 .normal}
 <p id="start"></p>
 
-<p id="my_id"></p>
-
 ---
+
+<p id="my_id"></p>
 
 ## 🔮 Заключение
 Теперь у вас есть полный список команд и вы знаете, как их использовать. Можете посмотреть остальные гайды на нашем сайте!
