--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -28,7 +28,7 @@ toc: true
   <tbody>
     <tr>
       <td>
-        <img src="/assets/img/town.png" align="left" valign="top" width="100%">
+        <img src="/assets/img/town.png" alt="Screenshot" align="left" valign="top" width="100%">
         <code>/start</code><a href="#start">⁺</a>
       </td>
       <td><code>/town</code> <code>этот город</code></td>
