--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -20,6 +20,7 @@ toc: true
 <table>
   <thead>
     <tr>
+      <th>Скриншот</th>
       <th>Команда</th>
       <th>Альтернатива</th>
       <th>Описание</th>
@@ -27,11 +28,9 @@ toc: true
   </thead>
   <tbody>
     <tr>
-      <td>
-        <p><img src="/assets/img/town.png" alt="Screenshot" align="left" valign="top" width="100%"></p>
-        <code>/start</code><a href="#start">⁺</a>
-      </td>
-      <td><code>/town</code> <code>этот город</code></td>
+      <td><p><img src="/assets/img/town.png" alt="Screenshot" align="left" valign="top" width="100%"></p></td>
+      <td><code>/start</code><a href="#start">⁺</a></td>
+      <td valign="bottom"><code>/town</code> <code>этот город</code></td>
       <td>Осмотреть город</td>
     </tr>
     <tr>
