--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -29,8 +29,12 @@ toc: true
   <tbody>
     <tr>
       <td><p><img src="/assets/img/town.png" alt="Screenshot" align="left" valign="top" width="100%"></p></td>
-      <td><code>/start</code><a href="#start">⁺</a></td>
-      <td valign="bottom"><code>/town</code> <code>этот город</code></td>
+      <td> 
+        `/start` <a href="#start">⁺</a>
+      </td>
+      <td valign="bottom"> 
+        `/town` `этот город` 
+      </td>
       <td>Осмотреть город</td>
     </tr>
     <tr>
