--- a/_posts/2025-09-25-commands.md
+++ b/_posts/2025-09-25-commands.md
@@ -52,10 +52,10 @@ toc: true
 
 ## ⚙️ Системные команды
 
-| Команда | Альтернатива | Описание |
-|:--------|:-------------|:---------|
-| `/my_id`<a href="#my_id">⁺</a> | `мой айди` | Узнать свой айди |
-| (Любое сообщение в ЛС) | - | Приветственное сообщение |
+| Скриншот | Команда | Альтернатива | Описание |
+|:---------|:--------|:-------------|:---------|
+| ![Desktop View](/assets/img/town.png){: .w-75 .normal} | `/my_id`<a href="#my_id">⁺</a> | `мой айди` | Узнать свой айди |
+|  | (Любое сообщение в ЛС) | - | Приветственное сообщение |
 
 
 ## 📜 Подробности
